--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>VASU KRISHNA BANDIKE<br />
+						<h1>VASU KRISHNA <br />
 						PORTFOLIO</h1>
 						<p>A showcase of my journey as a data scientist, featuring projects, skills, and accomplishments.  Explore my <a href="https://github.com/vasukrishna001">@BvkGit</a> for code and projects, and connect with me on <a href="https://www.linkedin.com/in/vasukrishnabandike/">@BvkLd</a><br />
 							for professional updates and collaborations.</p>
