--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>VASU KRISHNA PORTFOLIO</title>
+		<title>VASU KRISHNA Bandike PORTFOLIO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>VASU KRISHNA <br />
+						<h1>VASU KRISHNA BANDIKE<br />
 						PORTFOLIO</h1>
 						<p>A showcase of my journey as a data scientist, featuring projects, skills, and accomplishments.  Explore my <a href="https://github.com/vasukrishna001">@BvkGit</a> for code and projects, and connect with me on <a href="https://www.linkedin.com/in/vasukrishnabandike/">@BvkLd</a><br />
 							for professional updates and collaborations.</p>
