added new PowerBi project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>VASU KRISHNA Bandike<br />
+						<h1>VASU KRISHNA BANDIKE<br />
 						PORTFOLIO</h1>
 						<p>A showcase of my journey as a data scientist, featuring projects, skills, and accomplishments.  Explore my <a href="https://github.com/vasukrishna001">@BvkGit</a> for code and projects, and connect with me on <a href="https://www.linkedin.com/in/vasukrishnabandike/">@BvkLd</a><br />
 							for professional updates and collaborations.</p>
@@ -155,6 +155,19 @@
 										Additionally, it includes functionality to undo the sorting by moving the files back to their original location.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/vasukrishna001/Python_AutofileSorting/blob/main/AutoFileSOrting.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">March, 2024</span>
+										<h2><a href="https://github.com/vasukrishna001/HR-Analytics-Power-BI-Dashboard">HR Analytics Insights<br />
+										Dashboard created using PowerBi desktop</a></h2>
+									</header>
+									<a href="https://github.com/vasukrishna001/HR-Analytics-Power-BI-Dashboard" class="image fit"><img src="images/PBi.webp" alt="" /></a>
+									<p>In this project,I built a Power BI dashboard to explore HR data and understand key attrition factors. The data, sourced from Kaggle, was combined into a single Excel file and imported into Power BI, where I performed data cleaning (handling missing values, removing duplicates, and correcting spelling errors) and used Power Query to transform the data. After establishing relationships between tables and adding numerical attrition columns, as well as bins for age and salary, I created interactive visuals to reveal insights such as overall attrition, tenure patterns, salary distributions, and performance ratings. 
+										The project concludes with a dynamic dashboard that enables stakeholders to filter by gender, department, and other factors for more targeted analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/vasukrishna001/HR-Analytics-Power-BI-Dashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
