--- a/index.html
+++ b/index.html
@@ -170,7 +170,20 @@
 										<li><a href="https://github.com/vasukrishna001/HR-Analytics-Power-BI-Dashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
-								
+								<article>
+									<header>
+										<span class="date">January, 2025</span>
+										<h2><a href="https://github.com/vasukrishna001/Amazon_priceTracking">Price Tracker for Amazon Web<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/vasukrishna001/Amazon_priceTracking" class="image fit"><img src="images/amazon.png" alt="" /></a>
+									<p>This project is a Python-based price tracking system designed to help users monitor the prices of Amazon products on their wishlist. The system scrapes product data (title and price) from Amazon, logs the information into a CSV file, and sends email notifications if the price of a product drops below a specified threshold.
+
+										The script is set up to run automatically every day using Task Scheduler (Windows) or cron (Linux/macOS), ensuring that the user is always up to date with the prices of their wishlisted products.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/vasukrishna001/Amazon_priceTracking" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
