--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>VASU KRISHNA BANDIKE<br />
 						PORTFOLIO</h1>
-						<p>A showcase of my journey as a data scientist, featuring projects, skills, and accomplishments.  Explore my <a href="https://github.com/vasukrishna001">@BvkGit</a> for code and projects, and connect with me on <a href="https://www.linkedin.com/in/vasukrishnabandike/">@BvkLd</a><br />
-							for professional updates and collaborations.</p>
+						<p>A showcase of my journey as a Data Scientist — highlighting impactful projects, technical skills, and achievements.
+							Explore my work on <a href="https://github.com/vasukrishna001">@BvkGit</a> and connect with me on <a href="https://www.linkedin.com/in/vasukrishnabandike/">@BvkLd</a> for professional updates and collaboration opportunities..</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -50,6 +50,18 @@
 					<div id="main">
 
 						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<span class="date">Febraury, 2025</span>
+									<h2><a href="https://github.com/vasukrishna001/sp25_taxi">SP25 Taxi Demand Forecasting – ML Pipeline Project</a></h2>
+									<p>Developed a complete pipeline to predict hourly taxi ride demand across 260+ NYCity locations. Automated data collection, cleaning, and transformation, then trained LightGBM models for forecasting. 
+										Deployed an interactive dashboard for real-time predictions and integrated visual analytics to monitor trends and model accuracy, achieving a 15% improvement in performance.</p>
+								</header>
+								<a href="https://github.com/vasukrishna001/sp25_taxi" class="image main"><img src="images/NYtaxi.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/vasukrishna001/sp25_taxi" class="button large">View Project</a></li>
+								</ul>
+							</article>
 							<article class="post featured">
 								<header class="major">
 									<span class="date">November, 2024</span>
