--- a/index.html
+++ b/index.html
@@ -52,16 +52,67 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Febraury, 2025</span>
-									<h2><a href="https://github.com/vasukrishna001/sp25_taxi">SP25 Taxi Demand Forecasting – ML Pipeline Project</a></h2>
-									<p>Developed a complete pipeline to predict hourly taxi ride demand across 260+ NYCity locations. Automated data collection, cleaning, and transformation, then trained LightGBM models for forecasting. 
-										Deployed an interactive dashboard for real-time predictions and integrated visual analytics to monitor trends and model accuracy, achieving a 15% improvement in performance.</p>
-								</header>
-								<a href="https://github.com/vasukrishna001/sp25_taxi" class="image main"><img src="images/NYtaxi.jpg" alt="" /></a>
+								<span class="date">February, 2025</span>
+								<h2>
+									<a href="https://github.com/vasukrishna001/Nyc_citi_taxi_predictions">NYC Citi Ride Demand Forecasting – ML Pipeline Project</a>
+								</h2>
+								<p>
+									Developed a complete pipeline to predict hourly taxi ride demand across 260+ NYCity locations. Automated data collection, cleaning, and transformation, then trained LightGBM models for forecasting. 
+									Deployed interactive STREAMLIT DASHBOARDS: 
+									<strong><a href="https://citi-bikes-dropdown.streamlit.app/" target="_blank">Citi Bike Ride Forecast Dashboard</a></strong>, 
+									<strong><a href="https://citi-bikes-mae-dashboard.streamlit.app/" target="_blank">Prediction Error Tracker</a></strong> 
+									for real-time predictions and integrated visual analytics to monitor trends and model accuracy, achieving a 15% improvement in performance.
+								</p>
+							</header>
+
+
+								<a href="https://github.com/vasukrishna001/Nyc_citi_taxi_predictions" class="image main"><img src="images/citi_ride.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/vasukrishna001/sp25_taxi" class="button large">View Project</a></li>
+									<li><a href="https://github.com/vasukrishna001/Nyc_citi_taxi_predictions" class="button large">View Project</a></li>
 								</ul>
 							</article>
+							<article class="post featured">
+								<header class="major">
+									<span class="date">February, 2025</span>
+									<h2>
+										<a href="http://streamlit-env2.eba-2mpnyyqa.us-east-1.elasticbeanstalk.com/">NYC Taxi Demand Forecasting – AWS ML Pipeline</a>
+									</h2>
+									<p>
+										Built a real-time NYC taxi demand forecasting system for 260+ locations using AWS (Lambda, S3, Glue, Athena, RDS). 
+										The pipeline automates data ingestion, transformation, and hourly prediction using LightGBM models tracked via MLflow. 
+										Deployed an interactive Streamlit dashboard on Elastic Beanstalk for live forecasts and historical trend analysis, integrated with 
+										<strong><a href="https://app.powerbi.com/view?r=eyJrIjoiM2I2YzkzYzktNTQxYi00MDQxLThjMWMtN2JiMzNlMjE2NjQyIiwidCI6Ijk2NDY0YThhLWY4ZWQtNDBiMS05OWUyLTVmNmI1MGEyMDI1MCIsImMiOjN9" target="_blank">Power BI</a></strong>  
+										for advanced visual analytics.
+									</p>
+								</header>
+
+								<a href="http://streamlit-env2.eba-2mpnyyqa.us-east-1.elasticbeanstalk.com/" class="image main">
+									<img src="images/NYtaxi.jpg" alt="NYC Taxi Forecast Dashboard" />
+								</a>
+								<ul class="actions special">
+									<li><a href="http://streamlit-env2.eba-2mpnyyqa.us-east-1.elasticbeanstalk.com/" class="button large">View Dashboard</a></li>
+								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="major">
+									<span class="date">November, 2024</span>
+									<h2><a href="https://app.snowflake.com/us-east-1/wxc35585/#/nyc_predictions-d1JwAdJcE">Snowflake-Based Taxi Ride Forecasting</a></h2>
+									<p>This project replicates the SP25_Taxi ride demand forecasting pipeline within the Snowflake ecosystem, utilizing its built-in scalability and performance. 
+									All data transformations and feature engineering were performed using Snowflake SQL, with hourly predictions stored in structured tables for historical trend analysis and model evaluation. 
+									Interactive dashboards built inside Snowflake provide real-time insights into ride patterns, forecast accuracy, and location-level demand across NYC zones. 
+									Python scripts with environment-based configuration automate the prediction workflow using the Snowflake connector.</p>
+								</header>
+								<a href="https://app.snowflake.com/us-east-1/wxc35585/#/nyc_predictions-d1JwAdJcE" class="image main">
+									<img src="images/snowflake_dash.jpg" alt="Snowflake Dashboard Preview" />
+								</a>
+								<ul class="actions special">
+									<li><a href="https://app.snowflake.com/us-east-1/wxc35585/#/nyc_predictions-d1JwAdJcE" class="button large">View Dashboard</a></li>
+								</ul>
+							</article>
+
+
+
 							<article class="post featured">
 								<header class="major">
 									<span class="date">November, 2024</span>
@@ -74,48 +125,59 @@
 									<li><a href="https://github.com/vasukrishna001/Neural-Networks-ML-project" class="button large">View Project</a></li>
 								</ul>
 							</article>
-							<article class="post featured">
-								<header class="major">
-									<span class="date">October, 2024</span>
-									<h2><a href="https://github.com/vasukrishna001/LifeExpectancy-Prediction_-Using-Spark/blob/main/Project_codefile.ipynb">Life Expectancy Prediction with Distributed Data Processing and Web Interface</a></h2>
-									<p>This project predicts life expectancy based on various socio-economic and health-related factors using Apache Spark's distributed data processing capabilities. 
-										It leverages the PySpark library for preprocessing and model training, and integrates a Streamlit web-based user interface (UI) for real-time predictions.</p>
-								</header>
-								<a href="https://github.com/vasukrishna001/LifeExpectancy-Prediction_-Using-Spark/blob/main/Project_codefile.ipynb" class="image main"><img src="images/DIC.jpeg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/vasukrishna001/LifeExpectancy-Prediction_-Using-Spark/blob/main/Project_codefile.ipynb" class="button large">View Project</a></li>
-								</ul>
-							</article>
-							<article class="post featured">
-								<header class="major">
-									<span class="date">March, 2024</span>
-									<h2><a href="https://github.com/vasukrishna001/Project_Data-mining-and-Statistics/blob/main/new_proj.Rmd">Predicting risk level of<br />
-										Covid19 Patients</a></h2>
-									<p>This project focuses on predicting the severity of illness in COVID-19 patients using machine learning models. 
-										By analyzing patient data, including symptoms, medical history, and demographic details, the goal is to assist healthcare providers in better utilizing resources and improving patient care outcomes.</p>
-								</header>
-								<a href="https://github.com/vasukrishna001/Project_Data-mining-and-Statistics/blob/main/new_proj.Rmd" class="image main"><img src="images/OIP.jpeg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/vasukrishna001/Project_Data-mining-and-Statistics/blob/main/new_proj.Rmd" class="button large">View Project</a></li>
-								</ul>
-							</article>
-							<article class="post featured">
-								<header class="major">
-									<span class="date">December, 2024</span>
-									<h2><a href="https://github.com/vasukrishna001/DBMS_Library-Management-Systems">Library Management System<br />
-									-DBMS</a></h2>
-									<p>This Library Management System (LMS) enhances library operations by providing insights into borrowing patterns, managing late book returns, and generating personalized book recommendations. 
-										By transitioning from spreadsheet-based systems to a robust SQL database, this system optimizes the storage, retrieval, and management of library data. 
-										It includes a web interface for easy interaction with the database, enabling users to perform essential operations like adding new records, viewing borrowing history, and analyzing library trends.</p>
-								</header>
-								<a href="https://github.com/vasukrishna001/DBMS_Library-Management-Systems" class="image main"><img src="images/library.jpeg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/vasukrishna001/DBMS_Library-Management-Systems" class="button large">View Project</a></li>
-								</ul>
-							</article>
+							
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">October, 2024</span>
+										<h2><a href="https://github.com/vasukrishna001/LifeExpectancy-Prediction_-Using-Spark/blob/main/Project_codefile.ipynb">
+											Life Expectancy Prediction<br />(PySpark + Streamlit UI)
+										</a></h2>
+									</header>
+									<a href="https://github.com/vasukrishna001/LifeExpectancy-Prediction_-Using-Spark/blob/main/Project_codefile.ipynb" class="image fit">
+										<img src="images/DIC.jpeg" alt="" />
+									</a>
+									<p>This project predicts life expectancy using PySpark's distributed data processing. A Streamlit-based interface enables real-time interaction for prediction and visualization. It demonstrates scalable data preprocessing and ML model deployment.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/vasukrishna001/LifeExpectancy-Prediction_-Using-Spark/blob/main/Project_codefile.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<span class="date">March, 2024</span>
+										<h2><a href="https://github.com/vasukrishna001/Project_Data-mining-and-Statistics/blob/main/new_proj.Rmd">
+											Predicting Risk Level<br />of COVID-19 Patients
+										</a></h2>
+									</header>
+									<a href="https://github.com/vasukrishna001/Project_Data-mining-and-Statistics/blob/main/new_proj.Rmd" class="image fit">
+										<img src="images/OIP.jpeg" alt="" />
+									</a>
+									<p>This project applies machine learning models to forecast the severity of COVID-19 symptoms based on clinical and demographic data, assisting in patient prioritization and healthcare resource optimization.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/vasukrishna001/Project_Data-mining-and-Statistics/blob/main/new_proj.Rmd" class="button">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<span class="date">December, 2024</span>
+										<h2><a href="https://github.com/vasukrishna001/DBMS_Library-Management-Systems">
+											Library Management System<br />(DBMS + Web Interface)
+										</a></h2>
+									</header>
+									<a href="https://github.com/vasukrishna001/DBMS_Library-Management-Systems" class="image fit">
+										<img src="images/library.jpeg" alt="" />
+									</a>
+									<p>A database-backed LMS that automates book lending, returns, and record-keeping. It features analytics for usage trends and includes a web interface to manage inventory and track user activity efficiently.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/vasukrishna001/DBMS_Library-Management-Systems" class="button">View Project</a></li>
+									</ul>
+								</article>
+
+								
 								<article>
 									<header>
 										<span class="date">October, 2024</span>
